{
    "allTodos": "All Todos",
    "addANewTodoItem": "Add a new to-do item",
    "details": "Details",
    "search": "Search",
    "itemHasBeenDeleted": "Item has been deleted",
    "undo": "Undo"
}