...
            icon: const Icon(Icons.done),
            color: Colors.white,
            iconSize: 30,
            onPressed: _save,
          ),
          IconButton(
            icon: const Icon(Icons.delete, key: Key('icon_delete'),),
            color: Colors.white,
            iconSize: 30,
            onPressed: _delete,
          ),
        ],
      ),
...
